--- a/login.html
+++ b/login.html
@@ -1,10 +1,10 @@
-
 <!DOCTYPE html>
 <html>
 <head>
 	<title>Login</title>
 	<link rel="stylesheet" type="text/css" href="navbar.css" />
 	<link rel="stylesheet" type="text/css" href="login.css" />
+	<link rel="icon" href="favicon.jpg">
 </head>
 <body>
 	<nav>
@@ -13,11 +13,11 @@
 			<li><a href="contact.html">Contact</a></li>
 			<li><a href="about.html">About</a></li>
 			<li><a class="active" href="login.html">Login</a></li>
-			<li><a href="signup.html">Signup</a></li>
+			<li><a href="signup.html">Signup</a></li> 
 		</ul>
 	</nav>
 	<section id="loginform">
-		<form id="myForm" method="post" action="choice.html" onsubmit="return myFunction()">
+		<form id="myForm" method="post" action="choice.html" >
 			<input type="text" id="name" name="email" placeholder="E-mail" ><br>
 			<input type="password" id="surname" name="password" placeholder="Password" ><br>
 			<input  type="submit" id="sub" value="Submit" >
