--- a/signup.html
+++ b/signup.html
@@ -1,10 +1,10 @@
-
 <!DOCTYPE html>
 <html>
 <head>
 	<title>Signup</title>
 	<link rel="stylesheet" type="text/css" href="navbar.css" />
 	<link rel="stylesheet" type="text/css" href="signup.css" />
+	<link rel="icon" href="favicon.jpg">
 </head>
 <body>
 	<nav>
