--- a/admin.html
+++ b/admin.html
@@ -1,20 +1,20 @@
-
 <!DOCTYPE html>
 <html>
 <head>
 	<title>Admin</title>
 	<link rel="stylesheet" type="text/css" href="navbar.css" />
 	<link rel="stylesheet" type="text/css" href="admin.css" />
-
+	<link rel="icon" href="favicon.jpg">
 </head>
 <body>
 	<nav>
-		<ul class="navigation">
+		<ul class="navigation"> 
 			<li><a href="admin.html">Home</a></li>
 			<li><a href="contact.html">Contact</a></li>
 			<li><a href="about.html">About</a></li>
 			<li><a href="login.html">Login</a></li>
 			<li><a href="signup.html">Signup</a></li>
+			<li style="float:right"><a href="login.html">Logout</a></li>
 		</ul>
 	</nav>
 	<div class="menu1">
