Change Page( options for Admin)

--- a/change_stuff.html
+++ b/change_stuff.html
@@ -1,10 +1,10 @@
-
 <!DOCTYPE html>
 <html>
 <head>
 	<title>Settings</title>
 	<link rel="stylesheet" type="text/css" href="navbar.css" />
 	<link rel="stylesheet" type="text/css" href="changestuff.css" />
+	<link rel="icon" href="favicon.jpg">
 </head>
 <body>
 	<nav>
@@ -14,7 +14,7 @@
 			<li><a href="about.html">About</a></li>
 			<li><a href="login.html">Login</a></li>
 			<li><a href="signup.html">Signup</a></li>
-			<li><a href="login.html">Logout</a></li>
+			<li style="float:right"><a href="login.html">Logout</a></li> 
 			
 		</ul>
 	</nav>
@@ -22,23 +22,23 @@
 		<div class="board">
 		<p>current win sum: 150 RON</p>
 		<form>
-				<input type="text" id="delete" name="delete" ><br>
-				<input type="submit" value="Change win sum" id="sub">
+				<input type="text" class="delete" name="delete" ><br>
+				<input type="submit" value="Change win sum" class="sub">
 		</form>
 		<p>current lose sum: 200 RON</p>
 		<form>
-				<input type="text" id="delete" name="delete" ><br>
-				<input type="submit" value="Change lose sum" id="sub">
+				<input type="text" class="delete" name="delete" ><br>
+				<input type="submit" value="Change lose sum" class="sub">
 		</form>
 		<p>dollar exchange rate: 3.99 RON</p>
 		<form>
-				<input type="text" id="delete" name="delete" ><br>
-				<input type="submit" value="Change dollar rate" id="sub">
+				<input type="text" class="delete" name="delete" ><br>
+				<input type="submit" value="Change dollar rate" class="sub">
 		</form>
 		<p>euro exchange rate: 4.57 RON</p>
 		<form >
 				<input type="text" id="delete" name="delete" ><br>
-				<input type="submit" value="Change euro rate" id="sub">
+				<input type="submit" value="Change euro rate" class="sub">
 		</form>
 		
 		</div>
