--- a/game.html
+++ b/game.html
@@ -4,6 +4,7 @@
 	<title> New Game </title>
 	<link rel="stylesheet" type="text/css" href="navbar.css" />
 	<link rel="stylesheet" type="text/css" href="gamecss.css" />
+	<link rel="icon" href="favicon.jpg">
 </head>
 <body>
 	<nav>
@@ -16,8 +17,7 @@
 			<li style="float:right"><a href="login.html">Logout</a></li> 
 		</ul>
 	</nav>
-	
-	<div name="console" class="console">
+	<div class="console">
 	<div class="console1" id="console1">
 		<p>Cotatie RON</p><br>
 		<div>
@@ -25,7 +25,7 @@
 			<p>1 USD = 3.99 RON </p>
 		</div>
 	</div>
-	<div name="console2" class="console2">
+	<div class="console2">
 
 		<p>win sum: 255 lose sum: 33 </p>
 
@@ -50,7 +50,7 @@
 		</fieldset>
 			<input class="exchange" type="submit" value="convert">
 		</form>
-		<table border=1 style="margin-top:5px;width:100%;">
+		<table border="1" style="margin-top:5px;width:100%;">
 		<tr>
 			<td>RON</td><td id="RON">200</td>
 		</tr>
