Admin Page-responsive

--- a/admin.html
+++ b/admin.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>Admin</title>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="navbar.css" />
 	<link rel="stylesheet" type="text/css" href="admin.css" />
 	<link rel="icon" href="favicon.jpg">
@@ -17,7 +19,17 @@
 			<li style="float:right"><a href="login.html">Logout</a></li>
 		</ul>
 	</nav>
-	<div class="menu1">
+	<div class="responsive-bar">
+		<h1>MENU</h1>
+	</div>
+	<script type="text/javascript">
+		$(document).ready(function() {
+			$("h1").click(function(){
+				$("ul").slideToggle(500);
+			})
+		})
+	</script>
+	
 
 		<div class="upperleft">
 		<form action="delete_stuff.html">
@@ -30,7 +42,7 @@
 				<input type="submit" value="Change Stuff" id="cha">
 		</form>
 		</div>
-	</div>
+	
 
 </body>
 </html>
