--- a/game.html
+++ b/game.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title> New Game </title>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="navbar.css" />
 	<link rel="stylesheet" type="text/css" href="gamecss.css" />
 	<link rel="icon" href="favicon.jpg">
@@ -17,6 +19,16 @@
 			<li style="float:right"><a href="login.html">Logout</a></li> 
 		</ul>
 	</nav>
+	<div class="responsive-bar">
+		<h1>MENU</h1>
+	</div>
+	<script type="text/javascript">
+		$(document).ready(function() {
+			$("h1").click(function(){
+				$("ul").slideToggle(500);
+			})
+		})
+	</script>
 	<div class="console">
 	<div class="console1" id="console1">
 		<p>Cotatie RON</p><br>
