--- a/signup.html
+++ b/signup.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>Signup</title>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="navbar.css" />
 	<link rel="stylesheet" type="text/css" href="signup.css" />
 	<link rel="icon" href="favicon.jpg">
@@ -16,6 +18,16 @@
 			<li><a class="active" href="signup.html">Signup</a></li>
 		</ul>
 	</nav>
+	<div class="responsive-bar">
+		<h1>MENU</h1>
+	</div>
+	<script type="text/javascript">
+		$(document).ready(function() {
+			$("h1").click(function(){
+				$("ul").slideToggle(500);
+			})
+		})
+	</script>
 	<section id="signupform" >
 
 		<form id="myForm2" action="choice.html" onsubmit="return myFunction()">
