--- a/admin.html
+++ b/admin.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="assets/css/navbar.css" />
 	<link rel="stylesheet" type="text/css" href="assets/css/admin.css" />
-	<link rel="icon" href="favicon.jpg">
+	<link rel="icon" href="assets/img/favicon.jpg">
 </head>
 <body>
 	<nav>
