--- a/home.html
+++ b/home.html
@@ -2,10 +2,13 @@
 <html>
 <head>
 	<title>Homepage</title>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="assets/css/navbar.css" />
 	<link rel="stylesheet" type="text/css" href="assets/css/home.css" />
 	<link rel="icon" href="assets/img/favicon.jpg">
 </head>
+
 <body>
 	<nav>
 		<ul class="navigation">
@@ -15,7 +18,21 @@
 			<li><a href="login.html">Login</a></li>
 			<li><a href="signup.html">Signup</a></li>
 		</ul>
+	
 	</nav>
+
+	<div class="responsive-bar">
+		<h1>MENU</h1>
+	</div>
+	<script type="text/javascript">
+		$(document).ready(function() {
+			$("h1").click(function(){
+				$("ul").slideToggle(500);
+			})
+		})
+	</script>
 	<img src="assets/img/speculapp.png" id="logo" alt="SpeculAPP Logo">
+
+	
 </body>
 </html>
