--- a/login.html
+++ b/login.html
@@ -4,9 +4,9 @@
 	<title>Login</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="navbar.css" />
-	<link rel="stylesheet" type="text/css" href="login.css" />
-	<link rel="icon" href="favicon.jpg">
+	<link rel="stylesheet" type="text/css" href="assets/css/navbar.css" />
+	<link rel="stylesheet" type="text/css" href="assets/css/login.css" />
+	<link rel="icon" href="assets/img/favicon.jpg">
 </head>
 <body>
 	<nav>
