--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>About</title>
+	<title>About</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="assets/css/navbar.css" />	
@@ -18,6 +18,7 @@
 			<li><a href="signup.html">Signup</a></li> 
 		</ul>
 	</nav>
+	
 	<div class="responsive-bar">
 		<h1>MENU</h1>
 	</div>
@@ -29,24 +30,28 @@
 		})
 	</script>
 
-<section id="about">
-<b>SpeculAPP</b> este un joc Web care simuleaza operatiuni de specula valutara. <br> <br> <br>
+	<section id="about">
+		<b>SpeculAPP</b> este un joc Web care simuleaza operatiuni de specula valutara. <br> <br> <br>
 
-Administratorul stabileste valutele (EUR, USD, GBP, etc.), 
-marjele de randomizare a cursului, durata de valabilitate a cursului (in secunde), suma de inceput (in RON), pragul de castig (e.g., peste 2000 RON) 
-si pragul de pierdere (de pilda, sub 100 RON). <br> <br> <br>
+		Administratorul stabileste valutele (EUR, USD, GBP, etc.), marjele de 
+		randomizare a cursului, durata de valabilitate a cursului (in secunde), 
+		suma de inceput (in RON), pragul de castig (e.g., peste 2000 RON) 
+		si pragul de pierdere (de pilda, sub 100 RON). <br> <br> <br>
 
+		Jucatorul are la dispozitie doua seturi de comenzi: <br> <br>
+		<small>- <i><u><b>Afla curs pentru valuta V</b></u></i> (daca cursul generat 
+		anterior este mai vechi decat durata de valabilitate setata, 
+		va fi generat un nou curs; altfel va fi luat in considerare cel vechi)</small>
+		<br> <br>
+		<small>- <i><u><b>Schimba X unitati din valuta V in valuta W</b></u></i> 
+		(dupa fiecare operatiune de schimb valutar, se calculeaza valoarea totala a 
+		portofoliului jucatorului in RON; daca aceasta valoare e mai mica decat pragul 
+		de pierdere, jucatorul a pierdut jocul, iar daca e mai mare decat cel de castig, 
+		atunci a castigat jocul, altfel poate continua cu alte operatiuni)</small> <br> <br> <br>
 
-Jucatorul are la dispozitie doua seturi de comenzi: <br> <br>
-<small>- <i><u><b>Afla curs pentru valuta V</b></u></i> (daca cursul generat anterior este mai vechi decat durata de valabilitate setata, 
-va fi generat un nou curs; altfel va fi luat in considerare cel vechi)</small>
-<br> <br>
-<small>- <i><u><b>Schimba X unitati din valuta V in valuta W</b></u></i> (dupa fiecare operatiune de schimb valutar, se calculeaza valoarea totala a portofoliului jucatorului in RON; 
-daca aceasta valoare e mai mica decat pragul de pierdere, jucatorul a pierdut jocul, iar daca e mai mare decat cel de castig, atunci a castigat jocul, 
-altfel poate continua cu alte operatiuni)</small> <br> <br> <br>
-
-Clasamentul celor mai "bogati" jucatori va fi generat dinamic si ca flux de stiri Atom sau drept raport disponibil in formatele HTML, JSON si PDF.
-</section>
+		Clasamentul celor mai "bogati" jucatori va fi generat dinamic si ca flux de stiri 
+		Atom sau drept raport disponibil in formatele HTML, JSON si PDF.
+	</section>
 
 </body>
 </html>
