--- a/contact.html
+++ b/contact.html
@@ -30,11 +30,11 @@
 		})
 	</script>
 
-<section id="names">
-<p id="creator"> Game Creators</p>
-<p> Andreea Avram <a target="_blank" href="https://www.facebook.com/avram.andreea22"> <img style="height:35px; width:35px" src="assets/img/fb.png" alt="FB Andreea"></a></p>
-<p> Paula Patachi <a target="_blank" href="https://www.facebook.com/paula.patachi" > <img style="height:35px; width:35px" src="assets/img/fb.png" alt="FB Paula"> </a></p>
-</section>
+	<section id="names">
+		<p id="creator"> Game Creators</p>
+		<p> Andreea Avram <a target="_blank" href="https://www.facebook.com/avram.andreea22"> <img src="assets/img/fb.png" alt="FB Andreea"></a></p>
+		<p> Paula Patachi <a target="_blank" href="https://www.facebook.com/paula.patachi" > <img src="assets/img/fb.png" alt="FB Paula"> </a></p>
+	</section>
 
 </body>
 </html>
