--- a/failure.html
+++ b/failure.html
@@ -11,11 +11,11 @@
 <body>
 <nav>
 <ul class="navigation">
-  <li><a href="home.php">Home</a></li>
-  <li><a href="contact.php">Contact</a></li>
-  <li><a href="about.php">About</a></li>
-  <li><a href="jsandformual.html">Login</a></li>
-  <li><a href="signup.php">Signup</a></li>
+  <li><a href="home.html">Home</a></li>
+  <li><a href="contact.html">Contact</a></li>
+  <li><a href="about.html">About</a></li>
+  <li><a href="login.html">Login</a></li>
+  <li><a href="signup.hml">Signup</a></li>
 </ul>
 </nav>
 <div class="responsive-bar">
